# dsa-mcp

./: .gitignore  LICENSE  README.md  UPSTREAM.md  pyproject.toml
.github/workflows/: test.yml
docs/: dSA-AUDIT.md
scripts/: alert_daemon.py  daily_recap.py
src/dsa_mcp/: __init__.py  server.py
src/dsa_mcp/alerts/: checker.py  rules.yaml
src/dsa_mcp/analysis/: ma.py  pattern.py  trend.py  volume.py
src/dsa_mcp/prompts/: decision.md  decision_chat.md  intel.md  portfolio.md  risk.md  technical.md
systemd/: alert-daemon.service  dsa-mcp.service
tests/: test_alert_daemon_debounce.py  test_analysis.py  test_daily_recap_history.py  verify-phase5a.sh  verify-phase5b.sh  verify-phase6.sh  verify-phase7.sh  verify-phase8.sh
