[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dsa-mcp"
version = "0.1.0"
description = "MCP server porting dSA (daily_stock_analysis) analysis capabilities"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "zhangsheng377" },
]
dependencies = [
    "mcp>=1.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "httpx>=0.27",  # for calling 8084 MCP from 8087
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# asyncio_mode omitted: dsa-mcp tests are all synchronous. The auto mode
# was a stub from dSA upstream that's not recognised by pytest 9.x — drop it.